Working on the resolution of problems into the modules initializer script

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -130,7 +130,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
     #~ Bash Utils library root directory                        | Default parent folder --> "${__BU_MAIN_ROOT_DIR_PATH}/"
     #~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    v_lineno="$(( LINENO + 4 ))";
+    v_lineno="$(( LINENO + 5 ))";
 
     declare -g \
     __BU_MAIN_MODULE_LIB_DIR_PATH;
@@ -138,22 +138,35 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
     __BU_MAIN_MODULE_LIB_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "lib" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
-        BU.ModuleInit.Msg "$(printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
+        BU.ModuleInit.Msg \
+            "$(printf \
+                "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-            "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_LIB_DIR_PATH')" >&2;
+            "${BASH_SOURCE[0]}" \
+            "${v_lineno}" \
+            '$__BU_MAIN_MODULE_LIB_DIR_PATH')" \
+        >&2;
 
         BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.Exit 1; return "${?}";
+        BU.ModuleInit.Exit 1;
+
+        return "${?}";
     };
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_DIR_PATH' \
-        "${__BU_MAIN_MODULE_LIB_DIR_PATH}" 'Dirpath' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos \
+        '__BU_MAIN_MODULE_LIB_DIR_PATH' \
+        "${__BU_MAIN_MODULE_LIB_DIR_PATH}" \
+        'Dirpath' \
         "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BUSubFoldersPaths__FNCT__LIB}" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
+        "${BASH_SOURCE[0]}" \
+        "${FUNCNAME[0]}" \
+        "${v_lineno}";
+
+    readonly __BU_MAIN_MODULE_LIB_DIR_PATH;
 
 
     #~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
